# airbnb-clone

./: .gitignore  pyproject.toml
config/: settings.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_rename_price_house_price_per_night.py  0003_house_pets_allowed.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py
